--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,13 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 server.port=8080
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.kafka.bootstrap-servers = localhost:9092
+spring.kafka.consumer.group-id = batch
+spring.kafka.topic.app = test
+#spring.kafka.consumer.auto-offset-reset = earliest
+#spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
