Cleaned the code and tested using swagger and added docker file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-spring.kafka.bootstrap-servers = localhost:9092
-spring.kafka.consumer.group-id = batch
-spring.kafka.topic.app = test
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.topic.create=bulkCreateOrder
+spring.kafka.topic.update=bulkUpdateOrder
